# distfile-mirror

./: BUILD.bazel  Gopkg.toml  README.md  WORKSPACE  database_schema.sql  dep.sh
cmd/dm_cron_download_containers/: BUILD.bazel  main.go
cmd/dm_cron_download_files/: BUILD.bazel  main.go
cmd/dm_web_admin/: BUILD.bazel  container_management_service.go  file_management_service.go  frontpage_service.go  main.go
cmd/dm_web_admin/templates/: containers_create.html  containers_image_info.html  containers_registries_list.html  containers_registry_info.html  containers_repository_info.html  file_info.html  files_create.html  files_list.html  frontpage.html  header.html
cmd/dm_web_proxy/: BUILD.bazel  certificate_generator.go  container_http_mirror_service.go  file_http_mirror_service.go  main.go  proxy_connection_handler.go  proxy_connection_hijacker.go  proxy_connection_listener.go
doc/diagrams/: dm-overview.xml
pkg/schema/: BUILD.bazel  schema.go
pkg/util/: BUILD.bazel
