load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "container_management_service.go",
        "file_management_service.go",
        "frontpage_service.go",
        "main.go",
    ],
    importpath = "github.com/ProdriveTechnologies/distfile-mirror/cmd/dm_web_admin",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/schema:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/docker/distribution:go_default_library",
        "//vendor/github.com/docker/distribution/manifest/manifestlist:go_default_library",
        "//vendor/github.com/docker/distribution/manifest/schema1:go_default_library",
        "//vendor/github.com/docker/distribution/manifest/schema2:go_default_library",
        "//vendor/github.com/gorilla/mux:go_default_library",
        "//vendor/github.com/jinzhu/gorm:go_default_library",
        "//vendor/github.com/jinzhu/gorm/dialects/postgres:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus/promhttp:go_default_library",
    ],
)

go_binary(
    name = "dm_web_admin",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:private"],
)

container_image(
    name = "dm_web_admin_container",
    entrypoint = ["/dm_web_admin"],
    files = [":dm_web_admin"],
)

container_image(
    name = "dm_web_admin_container_with_resources",
    base = ":dm_web_admin_container",
    data_path = ".",
    files = glob([
        "static/**",
        "templates/**",
    ]),
    visibility = ["//visibility:public"],
)
